[package]
name = "acme-client-route53"
version = "0.2.0-alpha1"
authors = ["Hanabusa Masahiro"]
edition = "2021"
description = "A simple ACME client using AWS Route53 or Lightsail DNS"
rust-version = "1.69.0"
readme = "README.md"
repository = "https://github.com/hanabu/acme-client-route53"
license = "MIT"
keywords = ["acme", "letsencrypt"]
categories = ["config","command-line-utilities", "web-programming"]
exclude = [".*", "acme.toml"]
default-run = "acme-client-route53"

[features]
default = ["lambda"]
lambda = ["dep:lambda_runtime", "dep:serde_json"]

# Use Rustls as TLS implementation, instead of system openssl
rustls = ["instant-acme/hyper-rustls"]

[lib]
path = "src/lib.rs"

# Binary running on localhost
[[bin]]
name = "acme-client-route53"
path = "src/bin/main.rs"

# Binary running on AWS Lambda
[[bin]]
name = "bootstrap"
path = "src/bin/lambda-bootstrap.rs"
required-features = ["lambda"]

[dependencies]
aws-config = { version="1", default-features=false, features=["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-smithy-runtime = { version="1", default-features=false, features=["client"] }
aws-sdk-lightsail = { version="1", default-features=false }
aws-sdk-route53 = { version="1", default-features=false }
aws-sdk-s3 = { version="1", default-features=false }
base64 = "0.22"
clap = { version="4", default-features=false, features=["std","derive","help","usage"]}
futures = { version="0.3" }
hickory-resolver = { version="0.25", features=["system-config", "tokio"] }
hyper = { version="1", features=["client","http1"] }
instant-acme = { version="0.8" }
lambda_runtime = { version="0.14", optional=true }
serde = { version="1", features=["derive"] }
serde_json = { version="1", optional=true }
thiserror = "2"
toml = "0.9"
tokio = { version="1", default-features=false, features=["macros", "rt-multi-thread"] }
url = "2"
x509-parser = { version="0.18" }
